# FloriBot1.0_ROS2

./: README.md
src/base/: CMakeLists.txt  package.xml
src/base/include/base/: diff_drive_lib.hpp  hardware_node.hpp  kinematics_calculator.h  kinematics_node.h  sensor_aggregator_node.h
src/base/launch/: base_launch.py
src/base/params/: hardware_params.yaml  kinematics_params.yaml
src/base/src/: Info_Slip_comp.txt  base_node.cpp  install_phidget.txt
src/base/src/nodes/: hardware_node.cpp  kinematics_node.cpp  sabertooth_node.cpp  sensor_aggregator_node.cpp  ssc32_manual_test.cpp  wheel_controller_node.cpp
